--- a/client/src/components/main/usersListPage/index.css
+++ b/client/src/components/main/usersListPage/index.css
@@ -1,7 +1,8 @@
 .users_list:last-child {
-  border-bottom: #000000 1px dashed;
+  border-bottom: 1px solid var(--pancake-border);
 }
 
 .user-card-container {
   flex: 2;
+  padding: 24px 0;
 }
